fix bug - scrollbar error

--- a/assets/css/basis.css
+++ b/assets/css/basis.css
@@ -23,7 +23,7 @@ strong {color:#444;font-weight:400}
 .unavailableLink { color:#A9A9A9; cursor: text; }
 
 .container .head {  padding-top: 40px; background: #ffffff; }
-#docHead.ch-fixed { position: fixed; z-index: 12; top: 60px; padding: 20px 0 20px 0; margin-top: 0px; }
+/* #docHead.ch-fixed { position: fixed; z-index: 12; top: 60px; padding: 20px 0 20px 0; margin-top: 0px; } */
 .container .docContainer.dc-fixed { margin-top: 60px; }
 .container .docContainer .head { width: 100%; }
 .container .docContainer .head  .editLinkColour  { padding: 0 20px; }
@@ -44,8 +44,9 @@ ul.circle > li p:hover, ul.circle li.on p, ul.square > li.on p, ul.square > li p
 
 /* default-layout.html   ---- subHeadWrapper */
 
-.subHeadWrapper { width: 100%; height: 60px; line-height: 58px; background-color: #ffffff; border-bottom: 1px solid #ddd; }
-.subHeadWrapper.shw-fixed { position: fixed; z-index: 12; top: 0; }
+.subHeadWrapper { width: 100%; height: 60px; line-height: 58px; background-color: #ffffff; border-bottom: 1px solid #ddd; position: fixed; top: 65px; z-index: 12 }
+#docHead { position: fixed; z-index: 12; top: 125px; padding: 20px 0 20px 0; margin-top: 0px; }
+/* .subHeadWrapper.shw-fixed { position: fixed; z-index: 12; top: 0; } */
 .subHeadWrapper .subHeaderMenuUl { list-style: none; font-size: 16px; margin: 0; cursor: pointer; }
 .subHeadWrapper .subHeaderMenuUl li { padding: 0 10px; cursor: pointer; display: inline-block; color: #323234; vertical-align: top; }
 .subHeadWrapper .subHeaderMenuUl li.on { color: #FE8E14; vertical-align: top; }
@@ -59,14 +60,14 @@ ul.circle > li p:hover, ul.circle li.on p, ul.square > li.on p, ul.square > li p
 .subHeadWrapper .mobileSubHeaderMenu ul li { display: inline-block; margin-right: 20px; }
 .subHeadWrapper .mobileSubHeaderMenu ul li:last-child { margin-right: 0; }
 
-.rightSideMenu { border-left: 1px solid #ddd; margin-top: 40px; height: 100%; max-height: 90vh; overflow: auto; }
+.rightSideMenu { border-left: 1px solid #ddd; margin-top: 66px; height: 100%; max-height: 90vh; overflow: auto; }
 .rightSideMenu.rsm-fixed { position: fixed; top: 80px; }
 .rightSideMenu ul { font-size: 14px; line-height: 22px; }
 .rightSideMenu ul li { margin-bottom: 5px; }
 .rightSideMenu ul li > ul { margin-top: 5px; }
 
 
-.markdown-body { margin-top: 40px; box-sizing: border-box; min-height: auto; }
+.markdown-body { margin-top: 66px; box-sizing: border-box; min-height: auto; }
 .markdown-body table th, .markdown-body table td { border-left: 1px solid #306877; border-right: 1px solid #306877; border-top: 1px solid #c7d0db; border-bottom: 1px solid #c7d0db; font-size: 14px;height: 30px; padding: 5px 10px; color: #606060; }
 .markdown-body table tr:last-child td { border-bottom: 1px solid #306877; }
 .markdown-body table th { border-top: 1px solid #306877; }
@@ -90,7 +91,8 @@ ul.circle > li p:hover, ul.circle li.on p, ul.square > li.on p, ul.square > li p
 
 #menuLsitContainer ul { display: none; }
 
-#sideBarCnt.ftm-fixed, #fullTreeMenuListContainer.ftm-fixed { position: fixed; top: 60px; max-height: unset; }
+.sideBar, .docContainer { padding-top: 60px; }
+#sideBarCnt.sidebar-fixed { position: fixed; top: 60px; max-height: unset; }
 #fullTreeMenuListContainer ul { display: none; margin-left: 15px; margin-bottom: 10px; }
 #fullTreeMenuListContainer li { list-style: none; padding-left: 15px; line-height: 20px; margin-bottom: 8px; position: relative; }
 #fullTreeMenuListContainer li:before { content: ''; width: 6px; height: 6px; border-radius: 50%; display: inline-block; background: #999; position: absolute; left: 2px; top: 8px; }
@@ -174,7 +176,7 @@ div::-webkit-scrollbar-corner, ul::-webkit-scrollbar-corner{
 	padding-right: 30px;
 	color: #323234;
 }
-.history .changeBtn {
+.history .changeBtn, .history .fvChange {
 	color: #FE8E14;
 }
 .fullVersionHistory { position: relative; }
@@ -256,7 +258,11 @@ div::-webkit-scrollbar-corner, ul::-webkit-scrollbar-corner{
 
 @media (max-width: 991px) {
 	.footerWrapper { margin-top: 100px; }
-	.markdown-body { min-height: calc(100vh - 378px); }
+	.markdown-body { min-height: calc(100vh - 378px); margin-top: 40px; }
+	.rightSideMenu { margin-top: 40px; }
+	.subHeadWrapper { position: relative; top: 0; }
+	.sideBar, .docContainer { padding-top: 0px; }
+	#docHead { position: relative; top: 0; }
 	.sideBarIcon { height: 40px; line-height: 38px; background: #EEEEEE; color: #444; text-align: right; padding-right: 36px; width: calc(50% - 175px); cursor: pointer; }
 	.sideBar {position: absolute; width: auto; left: 0; z-index: 12; background: #eeeeee; padding: 20px; padding-left: calc(50% - 355px);}
 	.sideBar .mainPage { margin-top: 0; width: auto!important;max-width: calc(100% - 20px); overflow-x: auto; }
